5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_1952.log
== TEST (2019-05-01 18:53:28) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1.659,38	8% a = 8/100
De  1.659,39 a R 2.765,66	9% b = 9/100
De  2.765,67 a R 5.531,31	11% 11/100
Acima de  5.531,31	Desconto fixo de R 608,44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903,98	Isento
De R 1.903,99 a R 2.826,65	7,5%
De R 2.826,66 a R 3.751.05	15%
De R 3.751.06 a R 4.664,68	22,5%
Acima de R 4.664,68	27,5%

A = x *a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1.659,38	8% a = 8/100
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:54:26) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1.659.38	8% a = 8/100
De  1.659.39 a R 2.765.66	9% b = 9/100
De  2.765.67 a R 5.531.31	11% 11/100
Acima de  5.531,31	Desconto fixo de R 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903.98	Isento
De R 1.903.99 a R 2.826.65	7.5%
De R 2.826.66 a R 3.751.05	15%
De R 3.751.06 a R 4.664.68	22.5%
Acima de R 4.664,68	27.5%

A = x *a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1.659.38	8% a = 8/100
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:54:29) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1.659.38	8% a = 8/100
De  1.659.39 a R 2.765.66	9% b = 9/100
De  2.765.67 a R 5.531.31	11% 11/100
Acima de  5.531,31	Desconto fixo de R 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903.98	Isento
De R 1.903.99 a R 2.826.65	7.5%
De R 2.826.66 a R 3.751.05	15%
De R 3.751.06 a R 4.664.68	22.5%
Acima de R 4.664,68	27.5%

A = x *a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1.659.38	8% a = 8/100
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:55) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1659.38	8% 
De  1659.39 a R 2.765.66	9% 
De  2765.67 a R 5.531.31	11% 11/100
Acima de  5.531,31	Desconto fixo de R
a = 8/100
b = 9/100
c = 11/100
d = 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903.98	Isento
De R 1.903.99 a R 2.826.65	7.5%
De R 2.826.66 a R 3.751.05	15%
De R 3.751.06 a R 4.664.68	22.5%
Acima de R 4.664,68	27.5%

A = x *a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1659.38	8% 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:29:16) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1659.38	8% 
De  1659.39 a R 2.765.66	9% 
De  2765.67 a R 5.531.31	11% 11/100
Acima de  5.531,31	Desconto fixo de R
a = 8/100
b = 9/100
c = 11/100
d = 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903.98	Isento
De R 1.903.99 a R 2.826.65	7.5%
De R 2.826.66 a R 3.751.05	15%
De R 3.751.06 a R 4.664.68	22.5%
Acima de R 4.664,68	27.5%

A = x * a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1659.38	8% 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:29:37) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto
Até  1659.38	8% 
De  1659.39 a R 2.765.66	9% 
De  2765.67 a R 5.531.31	11% 11/100
Acima de  5.531,31	Desconto fixo de R
a = 8/100
b = 9/100
c = 11/100
d = 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100
Até R 1.903.98	Isento
De R 1.903.99 a R 2.826.65	7.5%
De R 2.826.66 a R 3.751.05	15%
De R 3.751.06 a R 4.664.68	22.5%
Acima de R 4.664,68	27.5%

A = x * a
A1 = x - A
print(A)
print(A1)
-- ERROR:
File "XXXX", line 3
    Até  1659.38	8% 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:29:54) 
-- CODE:
x = float(input("insira o salario bruto:"))
#Aliquota no salário bruto

a = 8/100
b = 9/100
c = 11/100
d = 608.44

#aliquota do imposto de renda
a1 = 7,5/100
b1 = 15/100
c1 = 22.5/100
d1 = 27.5/100

A = x * a
A1 = x - A
print(A)
print(A1)
-- OUTPUT:
98.7648
1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
